--- a/Task_3_1P/Webhook/project.properties
+++ b/Task_3_1P/Webhook/project.properties
@@ -1,2 +1,2 @@
-dependencies.Adafruit_Sensor=1.0.2
-dependencies.Adafruit_DHT=0.0.4
+dependencies.JsonPaerserGeneratorRK=0.1.4
+dependencies.Grove_Temperature_And_Humidity_Sensor=1.0.7
