--- a/Task_3_1P/Webhook/project.properties
+++ b/Task_3_1P/Webhook/project.properties
@@ -1,2 +1,3 @@
 dependencies.JsonPaerserGeneratorRK=0.1.4
 dependencies.Grove_Temperature_And_Humidity_Sensor=1.0.7
+dependencies.JsonParserGeneratorRK=0.1.4
