--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "particle.targetDevice": "vampire-narwhal",
     "particle.firmwareVersion": "1.4.4",
-    "particle.targetPlatform": "argon"
+    "particle.targetPlatform": "argon",
+    "python.pythonPath": "C:\\Users\\peter\\AppData\\Local\\Programs\\Python\\Python37-32\\python.exe"
 }
